feat: add showUser handler logic
